Anonymous | Login | 2021-01-23 11:53 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] | [ Issue History ] [ Print ] | ||||||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||||||
0031176 | Open CASCADE | [OCCT] OCCT:Data Exchange | public | 2019-11-19 03:01 | 2020-09-11 17:44 | ||||||||
Reporter | kgv | ||||||||||||
Assigned To | kgv | ||||||||||||
Priority | normal | Severity | minor | ||||||||||
Status | new | Resolution | open | ||||||||||
Platform | OS | OS Version | |||||||||||
Product Version | [OCCT] 7.4.0 | ||||||||||||
Target Version | [OCCT] 7.6.0* | Fixed in Version | |||||||||||
Summary | 0031176: Draw Harness, RWMesh_CafReader::generateNames() - reuse product name when instance name is not set | ||||||||||||
Description | Current implementation of RWMesh_CafReader::generateNames() sets file name to unnamed Instance names, even if Product name for the same node is defined. | ||||||||||||
Tags | No tags attached. | ||||||||||||
Test case number | |||||||||||||
Attached Files | |||||||||||||
![]() |
|
(0089063) git (administrator) 2019-11-19 03:02 |
Branch CR31176 has been created by kgv. SHA-1: fbad5ffee2d08a3cb8db4239ae06ed1c46641783 Detailed log of new commits: Author: kgv Date: Tue Nov 19 03:00:27 2019 +0300 0031176: Draw Harness, RWMesh_CafReader::generateNames() - reuse product name when instance name is not set |
![]() |
|||
Date Modified | Username | Field | Change |
2019-11-19 03:01 | kgv | New Issue | |
2019-11-19 03:01 | kgv | Assigned To | => kgv |
2019-11-19 03:01 | kgv | Summary | Draw Harness - reuse product name RWMesh_CafReader::generateNames() when instance name is not set => Draw Harness, RWMesh_CafReader::generateNames() - reuse product name when instance name is not set |
2019-11-19 03:02 | git | Note Added: 0089063 | |
2020-09-11 17:44 | kgv | Target Version | 7.5.0 => 7.6.0* |
Copyright © 2000 - 2021 MantisBT Team |