0031176: Draw Harness, RWMesh_CafReader::generateNames() - reuse product name when instance name is not set